Hm, fix scrolling once more, but tooltips get clipped

--- a/src-js/views-fontoverview/assets/fontoverview.css
+++ b/src-js/views-fontoverview/assets/fontoverview.css
@@ -27,6 +27,7 @@ font-overview-navigation {
 
 .font-overview-navigation-section {
   flex: 1;
+  overflow: hidden;
 }
 
 #glyph-cell-view-container {
